# what-to-eat

./: .gitignore  README.md  docker-compose.yml
designs/: architecture.puml  class.puml  comp_autoupdate.puml  comp_ets.puml  comp_menu.puml  comp_profile.puml  comp_recipe.puml  seq_autoupdate.puml  seq_ets.puml  seq_menu.puml  seq_profile.puml  seq_recipe.puml
services/auth/: .dockerignore  Cargo.toml  Dockerfile  README.md
services/auth/.cargo/: config.toml
services/auth/src/: auth.rs  auth_service.rs  main.rs  router_service.rs
services/eat-together/: .env.example  Dockerfile  README.md  requirements.txt
services/eat-together/src/: main.py  models.py
services/menu/: Dockerfile
services/menu-auto_update/: .env.example  .gitignore  Dockerfile  README.md  crontab.txt  kaist_menu_data.json  kaist_web_list.txt  requirements.txt  run_scraper.sh  scraper_config.json  scraper_config_example.json
services/menu-recommendation/: Dockerfile  README.md  requirements.txt
services/menu-recommendation/src/: main.py  models.py
services/menu-service/: README.md  requirements.txt
services/menu-service/src/: app.js
services/menu/src/: main.py  models.py  utils.py
services/order-service/: README.md
services/profile/: Cargo.toml  Dockerfile  README.md
services/profile/executables/: profile_auth-linux-86_64
services/profile/src/: main.rs  profile.py
services/profile/src/subservices/: auth.rs  mod.rs  profile.rs
services/recipe/: .env.example  API_CONTRACT.md  Dockerfile  README.md  requirements.txt
services/recipe-recommendation/: .env.example  .gitignore  API_CONTRACT.md  README.md  requirements.txt
services/recipe-recommendation/src/: app.py  crud_endpoints.py  main.py  models.py  recommendation_endpoints.py  utils.py
services/recipe-recommendation/tests/: test_main.py
services/recipe/tests/: conftest.py  test_main.py  test_profile_utils.py  test_rating_crud.py  test_recipe_crud.py  test_recipe_errors.py  test_recommendation.py
services/user-interface/: .gitignore  Dockerfile  README.md  api_client.py  app.py  requirements.txt
services/user-interface-flask/: api_client.py  app.py  requirements.txt
services/user-interface-flask/templates/: base.html  eat_together.html  food_home.html  group_recommendations.html  group_settings.html  index.html  login.html  menu_detail.html  preferences.html  recipe_detail.html  recipe_home.html  restaurant_detail.html  restaurant_matches.html  signup.html  tools_ingredients.html
services/user-interface/pages/: 01_HomeUnsigned.py  01_LoginSignup.py  02_Home.py  03_UserPreferences.py  04_FoodRecommendation.py  05_RecipeRecommendation.py  1_Landing.py  (+16 more)
services/user-service/: README.md
(+30 files in other folders)
