[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP Libs
hyper = {version = "1.6.0", features=["client","server","http1","nightly"]}
hyper-util = {version="0.1.12", features=["client","server-auto","tokio"]}
http-body-util = "0.1.3"
# Asynchronous code
tokio = {version="1.45.1", features=["net", "rt-multi-thread", "bytes", "macros"]}
# Serialisation / deserialisation (json)
serde = {version="1.0.219", features=["derive"]}
sonic-rs = "0.5.1"
# Logging
log = "0.4.27"
simple_logger = "5.0.0"
# Supabase
supabase-auth = "0.10.13"
uuid = "1.17.0"

[profile.dev]
lto = "off"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
opt-level = 3

