[package]
name = "profile"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = "5.0.0"
supabase_rs = "0.4.2"
tokio = {version= "1.45.0", features=["net", "rt-multi-thread"]}

[profile.dev]
lto = "off"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
opt-level = 3

# Benchmarks
#[dev-dependencies]
#criterion = "0.5"

#[[bench]]
#name = "bench_name"
#harness = false
