[package]
name = "profile"
version = "0.1.0"
edition = "2024"

[dependencies]
# Supabase
supabase_rs = "0.4.2"
supabase-auth = "0.10.13"
uuid = "1.17.0"
# Async
tokio = {version= "1.45.0", features=["net", "rt-multi-thread"]}
# HTTP Framework (raw TCP is easier imo)
poem = "3.1.10"
# Inter-process communication (unix domain sockets / windows named pipe)
interprocess = {version="2.2.3", features=["tokio"]}
# Serialisation/deserialisation
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_cbor = "0.11.2"
# Logging
log = "0.4.27"
simple_logger = "5.0.0"

[profile.dev]
lto = "off"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
opt-level = 3
