[package]
name = "profile"
version = "0.1.0"
edition = "2024"

[dependencies]
# profile

[profile.dev]
lto = "off"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
opt-level = 3

# Benchmarks
#[dev-dependencies]
#criterion = "0.5"

#[[bench]]
#name = "bench_name"
#harness = false
